docs: add setup.md and refresh README for restructured project
Add setup.md as the single source of truth for cloning, building, and
running both modules (frontend + backend), with prerequisites, env,
install, DB notes, run, tests, and troubleshooting.

Reconcile README with the chapterwise restructure:
- replace the stale flat model/service/ui tree with shared/ + chapter1..5
- fix the backend package tree (shared/ + per-chapter progress packages)
- correct the REST API table (per-chapter progress endpoints)
- drop the wrong D:\override-game run paths; point to setup.md
- mark chapters 2-5 as implemented (they are wired up in ChapterMapScreen)